# agent2agentprotocol

./: .gitignore  README.md  pyproject.toml
complex/: start_agents.sh  start_host.sh
complex/host_agent/: README.md
complex/host_agent/host/: __init__.py  agent.py  host_agent.py  tools.py
complex/kait_agent/: README.md
complex/kait_agent/kait/: __main__.py  agent.py  agent_executor.py  card.py
complex/karley_agent/: README.md
complex/karley_agent/karley/: __main__.py  agent.py  agent_executor.py  card.py
complex/nate_agent/: README.md
complex/nate_agent/nate/: __main__.py  agent.py  agent_executor.py  card.py
simple/: README.md  __main__.py  agent.py  agent_executor.py  card.py  client.py
