[project]
name = "agent2agentprotocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk==1.1.0",
    "boto3>=1.43.40",
    "crewai>=1.15.1",
    "google-adk>=2.3.0",
    "langchain-aws>=1.6.1",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "litellm>=1.91.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "starlette>=1.3.1",
    "uvicorn>=0.50.0",
]
